--- a/package.json
+++ b/package.json
@@ -16,6 +16,21 @@
     "url": "https://github.com/primefaces/primeng.git"
   },
   "license": "MIT",
+   "dependencies": {
+    "@angular/common": "~2.4.0",
+    "@angular/compiler": "~2.4.0",
+    "@angular/core": "~2.4.0",
+    "@angular/forms": "~2.4.0",
+    "@angular/http": "~2.4.0",
+    "@angular/platform-browser": "~2.4.0",
+    "@angular/platform-browser-dynamic": "~2.4.0",
+    "@angular/router": "~3.4.0",
+    "angular-in-memory-web-api": "~0.2.2",
+    "core-js": "^2.4.1",
+    "reflect-metadata": "^0.1.8",
+    "rxjs": "5.0.1",
+    "zone.js": "^0.7.4"
+  },
   "devDependencies": {
     "@types/node": "^6.0.45",
     "del": "^2.2.0",
